syntax = "proto3";
package m2g.pb;

enum ItemType {
  NO_ITEM = 0;
  CONSUMABLE_POTION_HP20 = 1;
}
